# CertifyEdge

./: .bazelrc  .bazelrc.windows  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  Makefile  README.md  WORKSPACE  certificate.json  certificate_formal_facts.json  certificate_handoff.json  certificate_summary.json  deploy_to_staging.ps1  h origin main --force  test_and_deploy.sh  trace_certificate.json
.cargo/: config.toml
.githooks/: prepare-commit-msg
cli/: BUILD.bazel  Cargo.toml
cli/src/: lib.rs  main.rs
docs/: README.md  labtrust-adapter.md  pcs-certificate-profile.md  pcs-core-certificate-formal-facts-proposal.md  pcs-guide.md  pcs-handoff.md  pcs-trace-certificates.md  quick-start.md
infrastructure/: BUILD
lean/: CertifyEdge.lean  lake-manifest.json  lakefile.lean
pcs_registry/: BenchmarkArtifactRef.v0.registry.json  BenchmarkReport.v0.registry.json  BenchmarkRun.v0.registry.json  CertificateBenchmarkRun.v0.registry.json  CertificateBenchmarkSuite.v0.registry.json  CertificateCoverageReport.v0.registry.json  CertificateFormalFacts.v0.registry.json  ComputationWitness.v0.registry.json  CoverageReport.v0.registry.json  ExplainQualityReport.v0.registry.json  FailureLocalizationResult.v0.registry.json  PcsBenchIngest.v0.registry.json  ProfileCoverageReport.v0.registry.json  ToolUseCertificate.v0.registry.json  TraceCertificate.v0.registry.json
schemas/pcs/: ArtifactRegistry.v0.schema.json  BUILD.bazel  BenchmarkArtifactRef.v0.schema.json  BenchmarkCaseSpec.v0.schema.json  BenchmarkReport.v0.schema.json  BenchmarkRun.v0.schema.json  CertificateBenchmarkRun.v0.schema.json  CertificateBenchmarkSuite.v0.schema.json  CertificateCoverageReport.v0.schema.json  CertificateFormalFacts.v0.schema.json  ComputationWitness.v0.schema.json  CoverageReport.v0.schema.json  ExplainQualityReport.v0.schema.json  FailureLocalizationResult.v0.schema.json  HandoffManifest.v0.schema.json  MetricSummary.v0.schema.json  PcsBenchIngest.v0.schema.json  ProfileCoverageReport.v0.schema.json  README.md  ToolUseCertificate.v0.schema.json  ToolUseTrace.v0.schema.json  TraceCertificate.v0.schema.json  common.defs.json
scripts/: BUILD.bazel  amend-head-without-trailer.sh  bazel-pcs-test.ps1  bazel-pcs-test.sh  build-release-run.sh  certifyedge.sh  check-certificate-benchmark-cases-drift.sh  check-pcs-benchmark-schemas-drift.sh  check-pcs-core-rc-drift.sh  check-pcs-hash-vectors-drift.sh  check-pcs-optional.sh  check-pcs-registry-contribution-drift.sh  generate-certificate-benchmark-cases.py  install-certifyedge.sh  merge-pcs-benchmark-defs.py  pcs-bench-producer.sh  pcs-release-run-validate.py  pcs-runbook.sh  pcs-v01-clean-checkout.ps1  pcs-v01-clean-checkout.sh  promote-release-run.sh  rewrite-strip-cursor-coauthor.sh  strip-cursor-coauthor.py  sync-pcs-benchmark-schemas.sh  sync-pcs-core-rc-fixtures.sh  sync-pcs-hash-vectors.sh  sync-pcs-registry-contributions.sh  sync-pcs-schemas.sh  sync-release-manifest-commits.py  test-substrate.ps1  test-substrate.sh  validate-certificate-benchmark-cases.sh  validate-certificate-benchmark-outputs.sh  validate-pcs-bench-ingest-consumer.sh  validate-pcs-bench-ingest-shape.py  validate-profiles.sh  write-labtrust-handoff-fixture.sh  write-release-manifest.py
scripts/lib/: python_cmd.sh
services/: BUILD
services/auditor-api/: Cargo.toml
services/auditor-api/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs
services/certificate/: BUILD  BUILD.bazel  Cargo.toml
services/certificate/src/: config.rs  error.rs  format.rs  lib.rs  main.rs  signing.rs  sigstore.rs  verification.rs
services/labtrust-adapter/: BUILD.bazel  Cargo.toml
services/labtrust-adapter/src/: convert.rs  hash.rs  labtrust_trace.rs  lib.rs  temporal.rs  validate.rs  workflow_sim.rs
services/lean-autoprover/: BUILD  BUILD.bazel  Cargo.toml
services/lean-autoprover/src/: cache.rs  certificate.rs  config.rs  error.rs  lib.rs  main.rs  tactics.rs
services/pcs-certificate/: BUILD.bazel  Cargo.toml
services/pcs-certificate/src/: certificate_benchmark.rs  computation_check.rs  computation_receipt.rs  computation_violation.rs  computation_witness.rs  emit_summary.rs  emitted_certificate.rs  formal_facts.rs  handoff.rs  hash.rs  lib.rs  metadata.rs  pcs_benchmark_bridge.rs  pcs_schema.rs  pcs_schema_external.rs  pcs_validate.rs  property_profile.rs  registry_contribution.rs  repair_hint.rs  signing.rs  source_commit.rs  status_policy.rs  tool_use_certificate.rs  tool_use_check.rs  tool_use_trace.rs  tool_use_violation.rs  trace_certificate.rs  validation.rs
services/policy-engine/: Cargo.toml
services/policy-engine/src/: lib.rs
services/provenance-service/: Cargo.toml
services/provenance-service/src/: lib.rs
services/smt-verifier/: BUILD  BUILD.bazel  Cargo.toml
services/smt-verifier/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  proto.rs  sandbox.rs  solver.rs  verifier.rs
services/stl-compiler/: BUILD  BUILD.bazel  Cargo.toml  README.md
services/stl-compiler/examples/: temporal_safety.stl  voltage_safety.stl
services/stl-compiler/proto/: stl_compiler.proto
services/stl-compiler/src/: ast.rs  compiler.rs  config.rs  error.rs  lean4.rs  lib.rs  main.rs  parser.rs  smt.rs
services/stl-compiler/tests/: integration_test.rs
tests/: BUILD  run_comprehensive_tests.ps1  run_comprehensive_tests.sh  simple_test.ps1  (+2 more)
tests/certifyedge-integration/: BUILD.bazel  Cargo.toml
tests/certifyedge-integration/common/: handoff.rs  handoff_fixtures.rs  support.rs
tests/certifyedge-integration/tests/: certificate_benchmark.rs  certificate_benchmark_cases.rs  certificate_benchmark_pcs_outputs.rs  certificate_handoff.rs  clean_checkout.rs  cli.rs  computation_emit.rs  handoff_computation.rs  handoff_emit.rs  handoff_output.rs  handoff_rejected.rs  handoff_tool_use.rs  labtrust_release.rs  pcs_core_rc.rs  pcs_v01.rs  phase2_policy.rs  phase2_registry.rs  runbook.rs  support.rs  tool_use_emit.rs  write_fixtures.rs
tests/pipeline_integration/: BUILD.bazel  Cargo.toml
tests/pipeline_integration/tests/: pipeline_integration.rs
(+166 files in other folders)
