"""Root package — re-exports docs and config filegroups for tooling."""

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    "Cargo.Bazel.lock",
    ".cargo/config.toml",
    "MODULE.bazel",
    "WORKSPACE",
    "README.md",
    "LICENSE",
])
