"""CertifyEdge: Bazel module configuration. Third-party Rust crates come from the workspace Cargo.lock."""

module(
    name = "certifyedge",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    cargo_config = "//:.cargo/config.toml",
    lockfile = "//:Cargo.Bazel.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(
    crate,
    "crates",
    # Proc-macro crates referenced from hand-written BUILD.bazel (bzlmod visibility).
    "crates__clap_derive-4.6.1",
    "crates__serde_derive-1.0.228",
    "crates__thiserror-impl-1.0.69",
    "crates__thiserror-impl-2.0.18",
)
