package(default_visibility = ["//visibility:public"])

filegroup(
    name = "schemas",
    srcs = [
        "TraceCertificate.v0.schema.json",
        "ToolUseCertificate.v0.schema.json",
        "ComputationWitness.v0.schema.json",
        "HandoffManifest.v0.schema.json",
        "ArtifactRegistry.v0.schema.json",
        "common.defs.json",
    ],
)
