[package]
name = "certificate"
version = "0.1.0"
edition = "2021"
authors = ["CertifyEdge Team <team@certifyedge.com>"]
description = "Certificate format and Ed25519 signing for CertifyEdge"
license = "Apache-2.0"
repository = "https://github.com/fraware/CertifyEdge"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
toml = "1.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
