load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "labtrust_adapter",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    proc_macro_deps = [
        "@crates__serde_derive-1.0.228//:serde_derive",
        "@crates__thiserror-impl-2.0.18//:thiserror_impl",
    ],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror-2.0.18",
        "@crates//:uuid",
    ],
)
