[package]
name = "labtrust-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "LabTrust trace parser, validator, and hash computation for CertifyEdge"
repository = "https://github.com/fraware/CertifyEdge"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
