[package]
name = "pcs-certificate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "PCS TraceCertificate.v0 export and verification for CertifyEdge"
repository = "https://github.com/fraware/CertifyEdge"

[dependencies]
labtrust-adapter = { path = "../labtrust-adapter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
jsonschema = "0.29"
