[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"
authors = ["CertifyEdge Team"]
description = "OPA policy engine for CertifyEdge authorization and compliance"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OPA Integration
reqwest = { version = "0.11", features = ["json"] }

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"

# Configuration
config = "0.13"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Metrics
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-http = "0.8"

# Testing
proptest = "1.3"
tokio-test = "0.4"

[dev-dependencies]
criterion = "0.5" 