[package]
name = "smt-verifier"
version = "1.0.0"
edition = "2021"
authors = ["CertifyEdge Team <team@certifyedge.com>"]
description = "CertifyEdge SMT Verification Microservice"
license = "Apache-2.0"
repository = "https://github.com/fraware/CertifyEdge"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
stl-compiler = { path = "../stl-compiler" }

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"
