[package]
name = "stl-compiler"
version = "0.1.0"
edition = "2021"
authors = ["CertifyEdge Team <team@certifyedge.com>"]
description = "STL to Lean 4 compiler for CertifyEdge platform"
license = "Apache-2.0"
repository = "https://github.com/fraware/CertifyEdge"
keywords = ["stl", "lean", "formal-verification", "temporal-logic"]
categories = ["science", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "process"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"
which = "6.0"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
proptest = "1.3"

[features]
default = ["full"]
full = ["lean4", "smt"]
lean4 = []
smt = []
test-utils = []
