load("@rules_rust//rust:defs.bzl", "rust_test")

package(default_visibility = ["//visibility:public"])

PCS_FIXTURES = [
    "//templates/hospital_lab:specs",
    "//tests/labtrust:fixtures",
    "//tests/fixtures/release-run:release_run_fixtures",
    "//tests/fixtures/labtrust-release:release_fixtures",
    "//schemas/pcs:schemas",
]

PCS_TEST_ENV = {
    # location: path under runfiles; support.rs also scans RUNFILES_DIR/_main/cli/.
    "CERTIFYEDGE_BIN": "$(rootpath //cli:certifyedge)",
}

rust_test(
    name = "cli",
    srcs = [
        "tests/cli.rs",
        "common/support.rs",
    ],
    edition = "2021",
    rustc_flags = ["--cfg=bazel"],
    data = PCS_FIXTURES + ["//cli:certifyedge"],
    env = PCS_TEST_ENV,
    deps = [
        "//services/labtrust-adapter:labtrust_adapter",
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:serde_json",
    ],
    tags = ["pcs", "integration"],
)

rust_test(
    name = "pcs_v01",
    srcs = [
        "tests/pcs_v01.rs",
        "common/support.rs",
    ],
    edition = "2021",
    data = PCS_FIXTURES,
    deps = [
        "//services/labtrust-adapter:labtrust_adapter",
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:serde_json",
    ],
    tags = ["pcs"],
)

rust_test(
    name = "pcs_core_rc",
    srcs = [
        "tests/pcs_core_rc.rs",
        "common/support.rs",
    ],
    edition = "2021",
    rustc_flags = ["--cfg=bazel"],
    data = PCS_FIXTURES + ["//cli:certifyedge"],
    env = PCS_TEST_ENV,
    deps = [
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:serde_json",
    ],
    tags = ["pcs", "integration"],
)

rust_test(
    name = "certificate_handoff",
    srcs = [
        "tests/certificate_handoff.rs",
        "common/support.rs",
        "common/handoff.rs",
    ],
    edition = "2021",
    rustc_flags = ["--cfg=bazel"],
    data = PCS_FIXTURES + ["//cli:certifyedge"],
    env = PCS_TEST_ENV,
    deps = [
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:serde_json",
    ],
    tags = ["pcs", "integration"],
)

rust_test(
    name = "labtrust_release",
    srcs = [
        "tests/labtrust_release.rs",
        "common/support.rs",
    ],
    edition = "2021",
    rustc_flags = ["--cfg=bazel"],
    data = PCS_FIXTURES + ["//cli:certifyedge"],
    env = PCS_TEST_ENV,
    deps = [
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:serde_json",
    ],
    tags = ["pcs", "integration"],
)

rust_test(
    name = "clean_checkout",
    srcs = [
        "tests/clean_checkout.rs",
        "common/support.rs",
    ],
    edition = "2021",
    rustc_flags = ["--cfg=bazel"],
    data = PCS_FIXTURES + ["//cli:certifyedge"],
    env = PCS_TEST_ENV,
    deps = [
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:serde_json",
    ],
    tags = ["pcs", "integration"],
)

rust_test(
    name = "runbook",
    srcs = [
        "tests/runbook.rs",
        "common/support.rs",
    ],
    edition = "2021",
    rustc_flags = ["--cfg=bazel"],
    data = PCS_FIXTURES + ["//cli:certifyedge"],
    env = PCS_TEST_ENV,
    deps = [
        "//services/labtrust-adapter:labtrust_adapter",
        "//services/pcs-certificate:pcs_certificate",
        "@crates//:assert_cmd",
        "@crates//:predicates",
        "@crates//:serde_json",
    ],
    tags = ["pcs", "integration"],
)
