[package]
name = "certifyedge-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
assert_cmd = "2"
certifyedge = { path = "../../cli" }
labtrust-adapter = { path = "../../services/labtrust-adapter" }
pcs-certificate = { path = "../../services/pcs-certificate" }
predicates = "3"
serde_json = "1"
